--- a/views/login.html
+++ b/views/login.html
@@ -28,7 +28,8 @@
       <div class="card card-login mx-auto mt-5">
         <div class="card-header">Login</div>
         <div class="card-body">
-          <form>
+
+          <form action="/login" method="post">
             <div class="form-group">
               <div class="form-label-group">
                 <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required="required" autofocus="autofocus">
@@ -51,6 +52,8 @@
             </div>
             <a class="btn btn-primary btn-block" href="index.html">Login</a>
           </form>
+
+
           <div class="text-center">
             <a class="d-block small mt-3" href="register.html">Register an Account</a>
             <a class="d-block small" href="forgot-password.html">Forgot Password?</a>
